refactor: 전역 코드 품질 고도화 (API 응답 규격 통일, Java 17 문법 적용 및 보안 패치) - 컨트롤러 응답을 ApiResponse 객체로 통일하여 프론트엔드 연동 편의성 증대 - 기존 .collect(Collectors.toList())를 Java 17 표준인 .toList()로 전면 교체 - jjwt 라이브러리 보안 취약점(CVE) 대응을 위한 버전 업그레이드 (0.12.6) - 서비스 로직 변경에 따른 UserControllerTest, UserServiceTest 정합성 복구 - 미사용 임포트 제거 및 패키지 풀네임 참조 방식 최적화 (Code Smell 제거)